crates/pgls_pretty_print/tests/snapshots/multi/tests__roleattributes_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/roleattributes.sql
snapshot_kind: text
---
CREATE ROLE regress_test_def_superuser;

SELECT
  rolname,
  rolsuper,
  rolinherit,
  rolcreaterole,
  rolcreatedb,
  rolcanlogin,
  rolreplication,
  rolbypassrls,
  rolconnlimit,
  rolpassword,
  rolvaliduntil
FROM
  pg_authid
WHERE
  rolname =
  'regress_test_def_superuser';

CREATE ROLE regress_test_superuser SUPERUSER;

SELECT
  rolname,
  rolsuper,
  rolinherit,
  rolcreaterole,
  rolcreatedb,
  rolcanlogin,
  rolreplication,
  rolbypassrls,
  rolconnlimit,
  rolpassword,
  rolvaliduntil
FROM
  pg_authid
WHERE
  rolname =
  'regress_test_superuser';

ALTER ROLE regress_test_superuser;
