crates/pgls_pretty_print/tests/snapshots/multi/tests__rowtypes_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/rowtypes_60.sql
snapshot_kind: text
---
CREATE TYPE complex AS (
  r DOUBLE PRECISION,
  i DOUBLE PRECISION
);

CREATE TEMPORARY TABLE fullname ( first TEXT, last TEXT );

CREATE TYPE quad AS ( c1 complex, c2 complex );

SELECT
  CAST((1.1,
  2.2)
  AS complex),
  CAST(ROW((3.3,
  4.4),
  (5.5,
  NULL))
  AS quad);

SELECT
  CAST(ROW('Joe',
  'Blow')
  AS fullname),
  CAST('(Joe,Blow)'
  AS fullname);

SELECT
  CAST('(Joe,von Blow)'
  AS fullname),
  CAST('(Joe,d''Blow)'
  AS fullname);

SELECT
  CAST('(Joe,"von""Blow")'
  AS fullname),
  CAST('(Joe,d\\Blow)'
  AS fullname);

SELECT CAST('(Joe,"Blow,Jr")' AS fullname);

SELECT CAST('(Joe,)' AS fullname);

SELECT CAST('(Joe)' AS fullname);

SELECT CAST('(Joe,,)' AS fullname);

SELECT CAST('[]' AS fullname);

SELECT CAST(' (Joe,Blow)  ' AS fullname);

SELECT CAST('(Joe,Blow) /' AS fullname);

SELECT pg_input_is_valid('(1,2)', 'complex');

SELECT pg_input_is_valid('(1,2', 'complex');

SELECT pg_input_is_valid('(1,zed)', 'complex');

SELECT * FROM pg_input_error_info('(1,zed)', 'complex');

SELECT * FROM pg_input_error_info('(1,1e400)', 'complex');

CREATE TEMPORARY TABLE quadtable ( f1 INT, q quad );

INSERT INTO quadtable VALUES (1, ((3.3, 4.4), (5.5, 6.6)));

INSERT INTO quadtable VALUES (2, ((NULL, 4.4), (5.5, 6.6)));

SELECT * FROM quadtable;

SELECT f1, q.c1 FROM quadtable;

SELECT f1, q.c1, qq.q.c1.i FROM quadtable AS qq;

CREATE TEMPORARY TABLE people ( fn fullname, bd DATE );

INSERT INTO people VALUES ('(Joe,Blow)', '1984-01-10');

SELECT * FROM people;

ALTER TABLE fullname ADD COLUMN suffix TEXT DEFAULT '';

ALTER TABLE fullname ADD COLUMN suffix TEXT DEFAULT NULL;

SELECT * FROM people;

UPDATE people SET fn."suffix" = 'Jr';

SELECT * FROM people;

INSERT INTO quadtable (f1,
q."c1"."r",
q."c2"."i")
VALUES (44,
55,
66);

UPDATE quadtable SET q."c1"."r" = 12 WHERE f1 = 2;

UPDATE quadtable SET q."c1" = 12;

SELECT * FROM quadtable;

CREATE TEMPORARY TABLE pp ( f1 TEXT );

INSERT INTO pp VALUES (repeat('abcdefghijkl', 100000));

INSERT INTO people
SELECT
  CAST(('Jim',
  f1,
  NULL)
  AS fullname),
  CURRENT_DATE
FROM
  pp;

SELECT
  fn.first,
  substr(
  fn.last,
  1,
  20
  ),
  length(
  fn.last
  )
FROM
  people;

UPDATE people SET fn."first" = 'Jack';

SELECT
  fn.first,
  substr(
  fn.last,
  1,
  20
  ),
  length(
  fn.last
  )
FROM
  people;

SELECT ROW(1, 2) < ROW(1, 3) AS "true";

SELECT ROW(1, 2) < ROW(1, 1) AS "false";

SELECT ROW(1, 2) < ROW(1, NULL) AS "null";

SELECT ROW(1, 2, 3) < ROW(1, 3, NULL) AS "true";

SELECT ROW(11, 'ABC') < ROW(11, 'DEF') AS "true";

SELECT ROW(11, 'ABC') > ROW(11, 'DEF') AS "false";

SELECT ROW(12, 'ABC') > ROW(11, 'DEF') AS "true";

SELECT ROW(1, 2, 3) < ROW(1, NULL, 4) AS "null";

SELECT ROW(1, 2, 3) = ROW(1, NULL, 4) AS "false";

SELECT ROW(1, 2, 3) <> ROW(1, NULL, 4) AS "true";

SELECT ROW('ABC', 'DEF') ~<=~ ROW('DEF', 'ABC') AS "true";

SELECT ROW('ABC', 'DEF') ~>=~ ROW('DEF', 'ABC') AS "false";

SELECT ROW('ABC', 'DEF') ~~ ROW('DEF', 'ABC') AS fail;

SELECT ROW(1, 2) = ROW(1, CAST(2 AS BIGINT));

SELECT ROW(1, 2) IN (ROW(3, 4), ROW(1, 2));

SELECT ROW(1, 2) IN (ROW(3, 4), ROW(1, CAST(2 AS BIGINT)));

SELECT
  unique1,
  unique2
FROM
  tenk1
WHERE
  (unique1,
  unique2) < ANY (SELECT
    ten,
    ten
  FROM
    tenk1
  WHERE
    hundred <
    3) AND
  unique1 <=
  20
ORDER BY 1;

SELECT
  thousand,
  tenthous
FROM
  tenk1
WHERE
  (thousand,
  tenthous) >=
  (997,
  5000)
ORDER BY thousand,
  tenthous;

SELECT
  thousand,
  tenthous
FROM
  tenk1
WHERE
  (thousand,
  tenthous) >=
  (997,
  5000)
ORDER BY thousand,
  tenthous;

SELECT
  thousand,
  tenthous,
  four
FROM
  tenk1
WHERE
  (thousand,
  tenthous,
  four) >
  (998,
  5000,
  3)
ORDER BY thousand,
  tenthous;

SELECT
  thousand,
  tenthous,
  four
FROM
  tenk1
WHERE
  (thousand,
  tenthous,
  four) >
  (998,
  5000,
  3)
ORDER BY thousand,
  tenthous;

SELECT
  thousand,
  tenthous
FROM
  tenk1
WHERE
  (998,
  5000) <
  (thousand,
  tenthous)
ORDER BY thousand,
  tenthous;

SELECT
  thousand,
  tenthous
FROM
  tenk1
WHERE
  (998,
  5000) <
  (thousand,
  tenthous)
ORDER BY thousand,
  tenthous;

SELECT
  thousand,
  hundred
FROM
  tenk1
WHERE
  (998,
  5000) <
  (thousand,
  hundred)
ORDER BY thousand,
  hundred;

SELECT
  thousand,
  hundred
FROM
  tenk1
WHERE
  (998,
  5000) <
  (thousand,
  hundred)
ORDER BY thousand,
  hundred;

CREATE TEMPORARY TABLE test_table ( a TEXT, b TEXT );

INSERT INTO test_table VALUES ('a', 'b');

INSERT INTO test_table
SELECT
  'a',
  NULL
FROM
  generate_series(
  1,
  1000
  );

INSERT INTO test_table VALUES ('b', 'a');

CREATE INDEX ON test_table USING btree ( a, b);

SET enable_sort = off;

SELECT
  a,
  b
FROM
  test_table
WHERE
  (a,
  b) >
  ('a',
  'a')
ORDER BY a,
  b;

SELECT
  a,
  b
FROM
  test_table
WHERE
  (a,
  b) >
  ('a',
  'a')
ORDER BY a,
  b;

RESET enable_sort;

SELECT * FROM int8_tbl AS i8 WHERE i8 IN (ROW(123, 456));

SELECT
  *
FROM
  int8_tbl
  AS i8
WHERE
  i8 IN (CAST(ROW(123,
  456)
  AS int8_tbl),
  '(4567890123456789,123)');

SELECT
  *
FROM
  int8_tbl
  AS i8
WHERE
  i8 IN (CAST(ROW(123,
  456)
  AS int8_tbl),
  '(4567890123456789,123)');

SELECT (ROW(1, 2.0)).f1;

SELECT (ROW(1, 2.0)).f2;

SELECT (ROW(1, 2.0)).nosuch;

SELECT (ROW(1, 2.0)).*;

SELECT r.f1 FROM (SELECT ROW(1, 2.0) AS r) AS ss;

SELECT r.f3 FROM (SELECT ROW(1, 2.0) AS r) AS ss;

SELECT r.* FROM (SELECT ROW(1, 2.0) AS r) AS ss;

SELECT ROW();

SELECT ROW() IS NULL;

SELECT ROW() = ROW();

SELECT ARRAY[ROW(1, 2), ROW(3, 4), ROW(5, 6)];

SELECT
  ROW(1,
  1.1) = ANY (ARRAY[ROW(7,
  7.7),
  ROW(1,
  1.1),
  ROW(0,
  0.0)]);

SELECT
  ROW(1,
  1.1) = ANY (ARRAY[ROW(7,
  7.7),
  ROW(1,
  1.0),
  ROW(0,
  0.0)]);

CREATE TYPE cantcompare AS ( p point, r DOUBLE PRECISION );

CREATE TEMPORARY TABLE cc ( f1 cantcompare );

INSERT INTO cc VALUES ('("(1,2)",3)');

INSERT INTO cc VALUES ('("(4,5)",6)');

SELECT * FROM cc ORDER BY f1;

CREATE TYPE testtype1 AS ( a INT, b INT );

SELECT
  CAST(ROW(1,
  2)
  AS testtype1) <
  CAST(ROW(1,
  3)
  AS testtype1);

SELECT
  CAST(ROW(1,
  2)
  AS testtype1) <=
  CAST(ROW(1,
  3)
  AS testtype1);

SELECT
  CAST(ROW(1,
  2)
  AS testtype1) =
  CAST(ROW(1,
  2)
  AS testtype1);

SELECT
  CAST(ROW(1,
  2)
  AS testtype1) <>
  CAST(ROW(1,
  3)
  AS testtype1);

SELECT
  CAST(ROW(1,
  3)
  AS testtype1) >=
  CAST(ROW(1,
  2)
  AS testtype1);

SELECT
  CAST(ROW(1,
  3)
  AS testtype1) >
  CAST(ROW(1,
  2)
  AS testtype1);

SELECT
  CAST(ROW(1,
  -2)
  AS testtype1) <
  CAST(ROW(1,
  -3)
  AS testtype1);

SELECT
  CAST(ROW(1,
  -2)
  AS testtype1) <=
  CAST(ROW(1,
  -3)
  AS testtype1);

SELECT
  CAST(ROW(1,
  -2)
  AS testtype1) =
  CAST(ROW(1,
  -3)
  AS testtype1);

SELECT
  CAST(ROW(1,
  -2)
  AS testtype1) <>
  CAST(ROW(1,
  -2)
  AS testtype1);

SELECT
  CAST(ROW(1,
  -3)
  AS testtype1) >=
  CAST(ROW(1,
  -2)
  AS testtype1);

SELECT
  CAST(ROW(1,
  -3)
  AS testtype1) >
  CAST(ROW(1,
  -2)
  AS testtype1);

SELECT
  CAST(ROW(1,
  -2)
  AS testtype1) <
  CAST(ROW(1,
  3)
  AS testtype1);

CREATE TYPE testtype3 AS ( a INT, b TEXT );

SELECT
  CAST(ROW(1,
  2)
  AS testtype1) <
  CAST(ROW(1,
  'abc')
  AS testtype3);

SELECT
  CAST(ROW(1,
  2)
  AS testtype1) <>
  CAST(ROW(1,
  'abc')
  AS testtype3);

CREATE TYPE testtype5 AS ( a INT );

SELECT
  CAST(ROW(1,
  2)
  AS testtype1) <
  CAST(ROW(1)
  AS testtype5);

SELECT
  CAST(ROW(1,
  2)
  AS testtype1) <>
  CAST(ROW(1)
  AS testtype5);

CREATE TYPE testtype6 AS ( a INT, b point );

SELECT
  CAST(ROW(1,
  '(1,2)')
  AS testtype6) <
  CAST(ROW(1,
  '(1,3)')
  AS testtype6);

SELECT
  CAST(ROW(1,
  '(1,2)')
  AS testtype6) <>
  CAST(ROW(1,
  '(1,3)')
  AS testtype6);

DROP TYPE testtype1, testtype3, testtype5, testtype6;

CREATE TYPE testtype1 AS ( a INT, b INT );

SELECT
  CAST(ROW(1,
  2)
  AS testtype1) *< CAST(ROW(1,
  3)
  AS testtype1);

SELECT
  CAST(ROW(1,
  2)
  AS testtype1) *<= CAST(ROW(1,
  3)
  AS testtype1);

SELECT
  CAST(ROW(1,
  2)
  AS testtype1) *= CAST(ROW(1,
  2)
  AS testtype1);

SELECT
  CAST(ROW(1,
  2)
  AS testtype1) *<> CAST(ROW(1,
  3)
  AS testtype1);

SELECT
  CAST(ROW(1,
  3)
  AS testtype1) *>= CAST(ROW(1,
  2)
  AS testtype1);

SELECT
  CAST(ROW(1,
  3)
  AS testtype1) *> CAST(ROW(1,
  2)
  AS testtype1);

SELECT
  CAST(ROW(1,
  -2)
  AS testtype1) *< CAST(ROW(1,
  -3)
  AS testtype1);

SELECT
  CAST(ROW(1,
  -2)
  AS testtype1) *<= CAST(ROW(1,
  -3)
  AS testtype1);

SELECT
  CAST(ROW(1,
  -2)
  AS testtype1) *= CAST(ROW(1,
  -3)
  AS testtype1);

SELECT
  CAST(ROW(1,
  -2)
  AS testtype1) *<> CAST(ROW(1,
  -2)
  AS testtype1);

SELECT
  CAST(ROW(1,
  -3)
  AS testtype1) *>= CAST(ROW(1,
  -2)
  AS testtype1);

SELECT
  CAST(ROW(1,
  -3)
  AS testtype1) *> CAST(ROW(1,
  -2)
  AS testtype1);

SELECT
  CAST(ROW(1,
  -2)
  AS testtype1) *< CAST(ROW(1,
  3)
  AS testtype1);

CREATE TYPE testtype2 AS ( a SMALLINT, b BOOLEAN );

SELECT
  CAST(ROW(1,
  TRUE)
  AS testtype2) *< CAST(ROW(2,
  TRUE)
  AS testtype2);

SELECT
  CAST(ROW(-2,
  TRUE)
  AS testtype2) *< CAST(ROW(-1,
  TRUE)
  AS testtype2);

SELECT
  CAST(ROW(0,
  FALSE)
  AS testtype2) *< CAST(ROW(0,
  TRUE)
  AS testtype2);

SELECT
  CAST(ROW(0,
  FALSE)
  AS testtype2) *<> CAST(ROW(0,
  TRUE)
  AS testtype2);

CREATE TYPE testtype3 AS ( a INT, b TEXT );

SELECT
  CAST(ROW(1,
  'abc')
  AS testtype3) *< CAST(ROW(1,
  'abd')
  AS testtype3);

SELECT
  CAST(ROW(1,
  'abc')
  AS testtype3) *< CAST(ROW(1,
  'abcd')
  AS testtype3);

SELECT
  CAST(ROW(1,
  'abc')
  AS testtype3) *> CAST(ROW(1,
  'abd')
  AS testtype3);

SELECT
  CAST(ROW(1,
  'abc')
  AS testtype3) *<> CAST(ROW(1,
  'abd')
  AS testtype3);

CREATE TYPE testtype4 AS ( a INT, b point );

SELECT
  CAST(ROW(1,
  '(1,2)')
  AS testtype4) *< CAST(ROW(1,
  '(1,3)')
  AS testtype4);

SELECT
  CAST(ROW(1,
  '(1,2)')
  AS testtype4) *<> CAST(ROW(1,
  '(1,3)')
  AS testtype4);

SELECT
  CAST(ROW(1,
  2)
  AS testtype1) *< CAST(ROW(1,
  'abc')
  AS testtype3);

SELECT
  CAST(ROW(1,
  2)
  AS testtype1) *<> CAST(ROW(1,
  'abc')
  AS testtype3);

CREATE TYPE testtype5 AS ( a INT );

SELECT
  CAST(ROW(1,
  2)
  AS testtype1) *< CAST(ROW(1)
  AS testtype5);

SELECT
  CAST(ROW(1,
  2)
  AS testtype1) *<> CAST(ROW(1)
  AS testtype5);

CREATE TYPE testtype6 AS ( a INT, b point );

SELECT
  CAST(ROW(1,
  '(1,2)')
  AS testtype6) *< CAST(ROW(1,
  '(1,3)')
  AS testtype6);

SELECT
  CAST(ROW(1,
  '(1,2)')
  AS testtype6) *>= CAST(ROW(1,
  '(1,3)')
  AS testtype6);

SELECT
  CAST(ROW(1,
  '(1,2)')
  AS testtype6) *<> CAST(ROW(1,
  '(1,3)')
  AS testtype6);

SELECT
  q.a,
  q.b =
  ROW(2),
  q.c =
  ARRAY[ROW(3)],
  q.d =
  ROW(ROW(4))
FROM
  unnest(
  ARRAY[ROW(1,
  ROW(2),
  ARRAY[ROW(3)],
  ROW(ROW(4))),
  ROW(2,
  ROW(3),
  ARRAY[ROW(4)],
  ROW(ROW(5)))]
  ) AS q (a INT,
  b RECORD,
  c RECORD[],
  d RECORD);

DROP TYPE
testtype1,
testtype2,
testtype3,
testtype4,
testtype5,
testtype6;

BEGIN;

CREATE TABLE price (
  id serial
  PRIMARY KEY,
  active BOOLEAN
  NOT NULL,
  price NUMERIC
);

CREATE TYPE price_input AS ( id INT, price NUMERIC );

CREATE TYPE price_key AS ( id INT );

CREATE FUNCTION
price_key_from_table(
  price
)
RETURNS price_key
AS '
    SELECT $1.id
'
LANGUAGE "sql";

CREATE FUNCTION
price_key_from_input(
  price_input
)
RETURNS price_key
AS '
    SELECT $1.id
'
LANGUAGE "sql";

INSERT INTO price
VALUES (1,
FALSE,
42),
(10,
FALSE,
100),
(11,
TRUE,
17.99);

UPDATE price
SET active = TRUE,
price = input_prices.price
FROM unnest(
CAST(ARRAY[(10,
123.00),
(11,
99.99)]
AS price_input[])
) AS input_prices
WHERE
  price_key_from_table(
  price.*
  ) =
  price_key_from_input(
  input_prices.*
  );

SELECT * FROM price;

ROLLBACK;

CREATE TEMPORARY TABLE compos ( f1 INT, f2 TEXT );

CREATE FUNCTION
fcompos1(
  "v" compos
)
RETURNS VOID
AS '
insert into compos values (v);  -- fail
'
LANGUAGE "sql";

CREATE FUNCTION
fcompos1(
  "v" compos
)
RETURNS VOID
AS '
insert into compos values (v.*);
'
LANGUAGE "sql";

CREATE FUNCTION
fcompos2(
  "v" compos
)
RETURNS VOID
AS '
select fcompos1(v);
'
LANGUAGE "sql";

CREATE FUNCTION
fcompos3(
  "v" compos
)
RETURNS VOID
AS '
select fcompos1(fcompos3.v.*);
'
LANGUAGE "sql";

SELECT fcompos1(ROW(1, 'one'));

SELECT fcompos2(ROW(2, 'two'));

SELECT fcompos3(ROW(3, 'three'));

SELECT * FROM compos;

SELECT CAST(fullname AS TEXT) FROM fullname;

SELECT CAST(fullname AS TEXT) FROM fullname;

SELECT text(fullname) FROM fullname;

SELECT fullname.text FROM fullname;

SELECT CAST(ROW('Jim', 'Beam') AS TEXT);

SELECT CAST(ROW('Jim', 'Beam') AS TEXT);

SELECT text(ROW('Jim', 'Beam'));

SELECT (ROW('Jim', 'Beam')).text;

INSERT INTO fullname VALUES ('Joe', 'Blow');

SELECT f.last FROM fullname AS f;

SELECT last(f) FROM fullname AS f;

CREATE FUNCTION
longname(
  fullname
)
RETURNS TEXT
LANGUAGE "sql"
AS 'select $1.first || '' '' || $1.last';

SELECT f.longname FROM fullname AS f;

SELECT longname(f) FROM fullname AS f;

ALTER TABLE fullname ADD COLUMN longname TEXT;

SELECT f.longname FROM fullname AS f;

SELECT longname(f) FROM fullname AS f;

SELECT row_to_json(i) FROM int8_tbl AS i;

SELECT row_to_json(i) FROM int8_tbl AS i (x, y);

SELECT
  row_to_json(
  ss
  )
FROM
  (SELECT
    q1,
    q2
  FROM
    int8_tbl) AS ss;

SELECT
  row_to_json(
  ss
  )
FROM
  (SELECT
    q1,
    q2
  FROM
    int8_tbl
  OFFSET 0) AS ss;

SELECT
  row_to_json(
  ss
  )
FROM
  (SELECT
    q1
    AS a,
    q2
    AS b
  FROM
    int8_tbl) AS ss;

SELECT
  row_to_json(
  ss
  )
FROM
  (SELECT
    q1
    AS a,
    q2
    AS b
  FROM
    int8_tbl
  OFFSET 0) AS ss;

SELECT
  row_to_json(
  ss
  )
FROM
  (SELECT
    q1
    AS a,
    q2
    AS b
  FROM
    int8_tbl) AS ss (x,
  y);

SELECT
  row_to_json(
  ss
  )
FROM
  (SELECT
    q1
    AS a,
    q2
    AS b
  FROM
    int8_tbl
  OFFSET 0) AS ss (x,
  y);

SELECT
  row_to_json(
  q
  )
FROM
  (SELECT
    thousand,
    tenthous
  FROM
    tenk1
  WHERE
    thousand =
    42 AND
    tenthous <
    2000
  OFFSET 0) AS q;

SELECT
  row_to_json(
  q
  )
FROM
  (SELECT
    thousand,
    tenthous
  FROM
    tenk1
  WHERE
    thousand =
    42 AND
    tenthous <
    2000
  OFFSET 0) AS q;

SELECT
  row_to_json(
  q
  )
FROM
  (SELECT
    thousand
    AS x,
    tenthous
    AS y
  FROM
    tenk1
  WHERE
    thousand =
    42 AND
    tenthous <
    2000
  OFFSET 0) AS q;

SELECT
  row_to_json(
  q
  )
FROM
  (SELECT
    thousand
    AS x,
    tenthous
    AS y
  FROM
    tenk1
  WHERE
    thousand =
    42 AND
    tenthous <
    2000
  OFFSET 0) AS q (a,
  b);

CREATE TEMPORARY TABLE tt1
AS
  SELECT
    *
  FROM
    int8_tbl
  LIMIT 2;

CREATE TEMPORARY TABLE tt2 () INHERITS (tt1);

INSERT INTO tt2 VALUES (0, 0);

SELECT
  row_to_json(
  r
  )
FROM
  (SELECT
    q2,
    q1
  FROM
    tt1
  OFFSET 0) AS r;

CREATE TEMPORARY TABLE tt3 () INHERITS (tt2);

INSERT INTO tt3 VALUES (33, 44);

SELECT row_to_json(CAST(CAST(tt3 AS tt2) AS tt1)) FROM tt3;

SELECT
  r,
  r IS NULL
  AS isnull,
  r IS NOT NULL
  AS isnotnull
FROM
  (VALUES (1,
  ROW(1,
  2)),
  (1,
  ROW(NULL,
  NULL)),
  (1,
  NULL),
  (NULL,
  ROW(1,
  2)),
  (NULL,
  ROW(NULL,
  NULL)),
  (NULL,
  NULL)) AS r (a,
  b);

SELECT
  r,
  r IS NULL
  AS isnull,
  r IS NOT NULL
  AS isnotnull
FROM
  (VALUES (1,
  ROW(1,
  2)),
  (1,
  ROW(NULL,
  NULL)),
  (1,
  NULL),
  (NULL,
  ROW(1,
  2)),
  (NULL,
  ROW(NULL,
  NULL)),
  (NULL,
  NULL)) AS r (a,
  b);

WITH r (a,
b) AS MATERIALIZED (
  VALUES (1,
  ROW(1,
  2)),
  (1,
  ROW(NULL,
  NULL)),
  (1,
  NULL),
  (NULL,
  ROW(1,
  2)),
  (NULL,
  ROW(NULL,
  NULL)),
  (NULL,
  NULL)
)
SELECT
  r,
  r IS NULL
  AS isnull,
  r IS NOT NULL
  AS isnotnull
FROM
  r;

WITH r (a,
b) AS MATERIALIZED (
  VALUES (1,
  ROW(1,
  2)),
  (1,
  ROW(NULL,
  NULL)),
  (1,
  NULL),
  (NULL,
  ROW(1,
  2)),
  (NULL,
  ROW(NULL,
  NULL)),
  (NULL,
  NULL)
)
SELECT
  r,
  r IS NULL
  AS isnull,
  r IS NOT NULL
  AS isnotnull
FROM
  r;

WITH cte (c) AS MATERIALIZED (
  SELECT
    ROW(1,
    2)
),
cte2 (c) AS (
  SELECT
    *
  FROM
    cte
)
SELECT
  *
FROM
  cte2
  AS t
WHERE
  (SELECT
    *
  FROM
    (SELECT
      c
      AS c1) AS s
  WHERE
    (SELECT
      c1.f1 >
      0)) IS NOT NULL;

WITH cte (c) AS MATERIALIZED (
  SELECT
    ROW(1,
    2)
),
cte2 (c) AS (
  SELECT
    *
  FROM
    cte
)
SELECT
  *
FROM
  cte2
  AS t
WHERE
  (SELECT
    *
  FROM
    (SELECT
      c
      AS c1) AS s
  WHERE
    (SELECT
      c1.f1 >
      0)) IS NOT NULL;

SELECT
  1
  AS one
FROM
  cte2
  AS t
WHERE
  (SELECT
    *
  FROM
    (SELECT
      c
      AS c1) AS s
  WHERE
    (SELECT
      c1.f1 >
      0)) IS NOT NULL;

SELECT pg_get_viewdef('composite_v', TRUE);

DROP VIEW "composite_v";

SELECT
  ss.a.x,
  ss.a.n
FROM
  (SELECT
    information_schema._pg_expandarray(
    ARRAY[1,
    2]
    )
    AS a) AS ss;

SELECT
  ss.a.x,
  ss.a.n
FROM
  (SELECT
    information_schema._pg_expandarray(
    ARRAY[1,
    2]
    )
    AS a) AS ss
WHERE
  FALSE;

WITH cte (c) AS MATERIALIZED (
  SELECT
    ROW(1,
    2)
),
cte2 (c) AS (
  SELECT
    *
  FROM
    cte
)
SELECT
  c.f1
FROM
  cte2
  AS t;

WITH cte (c) AS MATERIALIZED (
  SELECT
    ROW(1,
    2)
),
cte2 (c) AS (
  SELECT
    *
  FROM
    cte
)
SELECT
  c.f1
FROM
  cte2
  AS t
WHERE
  FALSE;

CREATE TABLE compositetable ( a TEXT, b TEXT );

INSERT INTO compositetable (a, b) VALUES ('fa', 'fb');

SELECT
  d.a
FROM
  (SELECT
    compositetable
    AS d
  FROM
    compositetable) AS s;

SELECT
  d.a,
  d.b
FROM
  (SELECT
    compositetable
    AS d
  FROM
    compositetable) AS s;

SELECT
  d.ctid
FROM
  (SELECT
    compositetable
    AS d
  FROM
    compositetable) AS s;

SELECT (CAST(NULL AS compositetable)).nonexistent;

SELECT (CAST(NULL AS compositetable)).a;

SELECT (CAST(NULL AS compositetable)).oid;

DROP TABLE "compositetable";
